modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-version:          "0001a--17-Aug-2022"
+version:          "0001b--17-Aug-2022"
 copyright:        "2022-2022"
 title:            "Nasi Uduk Ibu Alus"
 author:           "Ibu Alus"
