--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-version:          "0001c--17-Aug-2022"
+version:          "0001d--17-Aug-2022"
 copyright:        "2022-2022"
 title:            "Nasi Uduk Ibu Alus"
 author:           "Ibu Alus"
@@ -14,20 +14,10 @@ keywords:         "jekyll, testing"
 navbarlinks:
 - navbar:         "Home"
   link:           "/"
-- navbar:         "Links"
-  link:           "/LINKS/"
-- navbar:         "Tips"
-  link:           "/TIPS/"
-- navbar:         "Zip File"
-  link:           "/template.zip"
-- navbar:         "TarBall"
-  link:           "/template.tar.bz2"
 - navbar:         "GitHub"
   link:           "https://github.com/sdnbhd/alus"
 - navbar:         "Listing"
   link:           "/000.html"
-- navbar:         "About"
-  link:           "/ABOUT/"
 - navbar:         "GitHub Page"
   link:           "https://sdnbhd.github.io/alus/"
 lang:             "en-US"
