--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-version:          "0003b--23-Aug-2022"
+version:          "0004--18-Oct-2022"
 copyright:        "2022-2022"
 title:            "Nasi Uduk Ibu Alus"
 author:           "Ibu Alus"
